[package]
name = "fast-kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"

[dev-dependencies]
bytesize = "1.1.0"
criterion = "0.3"
rand = "0.8.5"
rand_xorshift = "0.3.0"
rocksdb = "0.18.0"
tempdir = "0.3.7"
tempfile = "3.3.0"

[[bench]]
name = "benchmarks"
harness = false
