[package]
name = "fast-kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"

[dev-dependencies]
bytesize = "1.1.0"
num_cpus = "1.13.1"
rand = "0.8.5"
rocksdb = "0.18.0"
tempdir = "0.3.7"
