[package]
name = "fast-kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
bytesize = "1.1.0"
clap = { version = "3.1.18", features = ["derive"] }
near-store = { path = "../nearcore/core/store" }
num_cpus = "1.13.1"
rand = "0.8.5"
rocksdb = "0.18.0"
tempdir = "0.3.7"
